rtg_tests/negative/non_function_call/go.mod
module example.com/rtgtests/negative/non_function_call

go 1.25
